[tool.poetry]
name = "langgraph-qwen-agent"
version = "0.1.0"
description = "LangGraph chat agent with context support using Qwen model from Tongyi"
authors = ["William Fu-Hinthorn <13333726+hinthornw@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
langgraph = ">=0.2.6"
python-dotenv = ">=1.0.1"
langchain-community = ">=0.2.0"
langchain-core = ">=0.2.0"
dashscope = ">=1.14.0"
fastapi = ">=0.104.0"
uvicorn = {version = ">=0.24.0", extras = ["standard"]}
psycopg2-binary = ">=2.9.0"
pydantic = ">=2.0.0"
typing-extensions = ">=4.0.0"
pymysql = ">=1.1.0"
openai = "^2.3.0"
langchain-openai = "^0.3.35"
mcp = "^1.17.0"
dbt-postgres = "^1.9.1"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.1"
ruff = ">=0.6.1"
pytest = ">=8.3.5"
pytest-asyncio = ">=0.21.0"
httpx = ">=0.24.0"
anyio = ">=4.7.0"
langgraph-cli = {version = ">=0.2.8", extras = ["inmem"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
